XHTML corrections - replace Value= with value=

--- a/reportwriter/admin/forms/ReportsCritSetup.html
+++ b/reportwriter/admin/forms/ReportsCritSetup.html
@@ -56,7 +56,7 @@
     <tr>
       <td><?php echo RPT_DATEFNAME; ?></td>
       <td colspan="4">
-	    <select name="DateField"><OPTION Value=""><?php echo RPT_SLCTFIELD; ?>
+	    <select name="DateField"><option value=""><?php echo RPT_SLCTFIELD; ?>
 		<?php echo CreateFieldList($ReportID,$DateListings['fieldname'],''); ?></select>
 	  </td>
     </tr>
@@ -106,7 +106,7 @@
 	    <?php } // end if ?>
 	  </td>
       <td>
-	    <select name="FieldName"><OPTION Value=""><?php echo RPT_SLCTFIELD; ?>
+	    <select name="FieldName"><option value=""><?php echo RPT_SLCTFIELD; ?>
 		<?php echo CreateFieldList($ReportID,$GroupListings['defaults']['fieldname'],''); ?></select>
 	  </td>
       <td>
@@ -175,7 +175,7 @@
 	    <?php } // end if ?>
 	  </td>
       <td>
-	    <select name="FieldName"><OPTION Value=""><?php echo RPT_SLCTFIELD; ?>
+	    <select name="FieldName"><option value=""><?php echo RPT_SLCTFIELD; ?>
 		<?php echo CreateFieldList($ReportID,$SortListings['defaults']['fieldname'],''); ?></select>
 	  </td>
       <td>
@@ -245,7 +245,7 @@
 	    <?php } // end if ?>
 	  </td>
       <td>
-	    <select name="FieldName"><OPTION Value=""><?php echo RPT_SLCTFIELD; ?>
+	    <select name="FieldName"><option value=""><?php echo RPT_SLCTFIELD; ?>
 		<?php echo CreateFieldList($ReportID,$CritListings['defaults']['fieldname'],''); ?></select>
 	  </td>
       <td>
