--- a/locale/de_DE.utf8/Manual/ManualSalesTypes.html
+++ b/locale/de_DE.utf8/Manual/ManualSalesTypes.html
@@ -1,26 +1,23 @@
-<br><br>
+<br /><br />
 <a name="SalesTypes"><font size="+3"><b>Umsatzarten/Preislisten</b></font></a>
-<br><br>
+<br /><br />
 Umsatzarten sind große Kategoreien, die die Umsatzerlöse einteilen, sie dürfen nicht mit den Warengruppen werwechselt werden. Ein Modehaus könnte zum Beispiel Umsatzarten haben für:
-<br><br>
+<br /><br />
 <ul>
-<li>
-Katalogverkauf - auf Anforderung beim Lieferanten bestellt
-<li>
-Lagerverkauf - von der Stange
-<li>
-Maßanfertigung - einzeln für einen bestimmten Kunden angefertigt
+<li>Katalogverkauf - auf Anforderung beim Lieferanten bestellt</li>
+<li>Lagerverkauf - von der Stange</li>
+<li>Maßanfertigung - einzeln für einen bestimmten Kunden angefertigt</li>
 </ul>
 Im Unterschied dazu verweisen die Warengruppen auf die Art der Waren. Jeder Kunde wird als zugehörig zu einer bestimmten Umsatzart definiert. Die Umsatzart könnte auch dazu benutzt werden, Kundengruppen zu bilden. Preislisten werden zu den Umsatzarten definiert, deshalb wird gegenüber kunden, die zur selben Umsatzart gehören, auch dieselbe Preisliste angewendet.
-<br><br>
+<br /><br />
 Die Preisfestlegung kann pro Material, Umsatzart (und Währung) eingerichtet werden. Lagerverkauf könnte einen Aufschlag für die größere Kapitalbindung verursachen oder vielleicht einen Rabatt, der die Mengenstaffel im Einkauf berücksichtigt. Für andere Unternehmensarten könnten Einzelhandel, Großhandel, Gewerbe, Sonderkunden geeignete Umsatzarten sein.
-<br><br>
-Umsatzarten/Preislisten können im Hauptmenü über Einstellungen -> Debitoren/Kreditoren -> Umsatzarten gepflegt werden.
-<br><br>
+<br /><br />
+Umsatzarten/Preislisten können im Hauptmenü über Einstellungen &rarr; Debitoren/Kreditoren &rarr; Umsatzarten gepflegt werden.
+<br /><br />
 <font size="+1"><b>Umsatzart-ID</b></font>
-<br><br>
+<br /><br />
 Das ist eine 2 Zeichen lange Abkürzung, die im Kundenstamm mit eingetragen wird. Sie muss gegen die ID anderer Umsatzarten eindeutig sein. Wenn Aufträge erfasst werden, bestimmt die Umsatzart zusammen mit der Währung des Kunden, welche Preisliste zur Anwendung kommt.
-<br><br>
+<br /><br />
 <font size="+1"><b>Umsatzart-Bezeichnung</b></font>
-<br><br>
+<br /><br />
 Für die Bezeichnung der Umsatzart stehen 20 Zeichen Text zur Verfügung. Dieses Feld wird verwendet, um die Umsatzart/Preisliste, die gegenüber dem Kunden angewendet wird, zu beschreiben.
