--- a/reportwriter/forms/ReportsFieldSetup.html
+++ b/reportwriter/forms/ReportsFieldSetup.html
@@ -53,7 +53,7 @@
 	    echo '<input name="ColumnBreak" type="checkbox" value="1"'.$selected.' /></td>'; } ?>
       <td align="center">
 	  <?php if ($FieldListings['defaults']['visible']=='1') $selected = ' checked'; else  $selected = ''; ?>
-	  <input name="Visible" type="checkbox" value="1"<?php echo $selected ?> /></td>
+	  <input name="Visible" type="checkbox" value="1"<?php echo $selected; ?> /></td>
       <td>
 		<?php if ($Type=='frm') {
 			if ($FieldListings['defaults']['buttonvalue']==RPT_BTN_ADDNEW) {
@@ -76,7 +76,7 @@
 			}
 		} ?>
         </td>
-      <td align = "center">
+      <td align="center">
 	  <input name="todo" type="submit" value="<?php echo $FieldListings['defaults']['buttonvalue']; ?>" />
 	  </td>
     </form></tr>
@@ -114,10 +114,10 @@
 			echo $TotalLevels[$FieldDetails['params']];
 		} ?></td>
       <td>
-		<input type=image name="up" value="up" src="../images/upicon.PNG" border="0" />
-		<input type=image name="dn" value="down" src="../images/downicon.PNG" border="0" />
-		<input type=image name="ed" value="edit" src="../images/editicon.png" border="0" />
-		<input type=image name="rm" value="delete" src="../images/delicon.png" border="0" onClick="return confirm('Delete this field?')" />
+		<input type="image" name="up" value="up" src="../images/upicon.png" />
+		<input type="image" name="dn" value="down" src="../images/downicon.png" />
+		<input type="image" name="ed" value="edit" src="../images/editicon.png" />
+		<input type="image" name="rm" value="delete" src="../images/delicon.png" onClick="return confirm('Delete this field?')" />
 		<?php if ($Type=='frm') echo '<input name="todo" type="submit" value="'.RPT_BTN_PROP.'" />'; ?>
 	  </td>
     </form></tr>
