--- a/reportwriter/forms/ReportsPageUpdate.html
+++ b/reportwriter/forms/ReportsPageUpdate.html
@@ -8,7 +8,7 @@
   <input name="PageForm" type="hidden" value="1" />
   <input name="ReportID" type="hidden" value="<?php echo $ReportID ?>" />
   <input name="GoBackURL" type="hidden" value="<?php echo $GoBackURL; ?>" />
-  <table width="100%"  border="0" cellspacing="0" cellpadding="0" />
+  <table width="100%"  border="0" cellspacing="0" cellpadding="0">
    <tr>
 	<td width="20%"><input name="todo" type="submit" id="back" value="<?php echo RPT_BTN_CANCEL ?>" /></td>
 	<td width="20%"><div align="center"><input name="todo" type="submit" id="update" value="<?php echo RPT_BTN_CRIT ?>" /></div></td>
