--- a/reportwriter/admin/forms/TplFrmCBlk.html
+++ b/reportwriter/admin/forms/TplFrmCBlk.html
@@ -7,7 +7,7 @@
 	<input name="SeqNum" type="hidden" value="<?php echo $SeqNum; ?>" />
 	<input name="ReportID" type="hidden" value="<?php echo $ReportID; ?>" />
 	<input name="ReportName" type="hidden" value="<?php echo $reportname; ?>" />
-  <table align="center" width="550"  border="0" cellspacing="0" cellpadding="0" />
+  <table align="center" width="550"  border="0" cellspacing="0" cellpadding="0">
     <tr>
       <td><input name="todo" type="submit" id="todo" value="<?php echo RPT_BTN_CANCEL; ?>" /></td>
       <td><div align="center"><input name="todo" type="submit" id="todo" value="<?php echo RPT_BTN_UPDATE; ?>" /></div></td>
@@ -49,10 +49,10 @@
 			echo'<tr><td align="center">'.$myrow['TblSeqNum'].'</td>';
 			echo'<td align="center">'.$myrow['TblField'].'</td>';
 			echo'<td align="center">'.$TextProcessing[$myrow['Processing']].'</td>';
-			echo'<td><input type="image" name="up'.$myrow['TblSeqNum'].'" value="up" src="../images/upicon.png" border="0" />
-			<input type="image" name="dn'.$myrow['TblSeqNum'].'" value="dn" src="../images/downicon.png" border="0" />
-			<input type="image" name="ed'.$myrow['TblSeqNum'].'" value="ed" src="../images/editicon.png" border="0" />
-			<input type="image" name="rm'.$myrow['TblSeqNum'].'" value="rm" src="../images/delicon.png" border="0" onClick="return confirm(\'Delete this field?\')" />
+			echo'<td><input type="image" name="up'.$myrow['TblSeqNum'].'" value="up" src="../images/upicon.png" />
+			<input type="image" name="dn'.$myrow['TblSeqNum'].'" value="dn" src="../images/downicon.png" />
+			<input type="image" name="ed'.$myrow['TblSeqNum'].'" value="ed" src="../images/editicon.png" />
+			<input type="image" name="rm'.$myrow['TblSeqNum'].'" value="rm" src="../images/delicon.png" onClick="return confirm(\'Delete this field?\')" />
 			</td></tr>';
 		}
 	} else {
