--- a/reportwriter/admin/forms/TplFrmData.html
+++ b/reportwriter/admin/forms/TplFrmData.html
@@ -79,7 +79,7 @@ document.onmousedown = mouseSelect;
 	<input name="SeqNum" type="hidden" value="<?php echo $SeqNum; ?>" />
 	<input name="ReportID" type="hidden" value="<?php echo $ReportID; ?>" />
 	<input name="ReportName" type="hidden" value="<?php echo $reportname; ?>" />
-  <table align="center" width="550"  border="0" cellspacing="0" cellpadding="0" />
+  <table align="center" width="550"  border="0" cellspacing="0" cellpadding="0">
     <tr>
       <td><input name="todo" type="submit" id="todo" value="<?php echo RPT_BTN_CANCEL; ?>" /></td>
       <td><div align="center"><input name="todo" type="submit" id="todo" value="<?php echo RPT_BTN_UPDATE; ?>" /></div></td>
@@ -92,13 +92,13 @@ document.onmousedown = mouseSelect;
     </tr>
     <tr>
       <td id="field_list" align="center" colspan="2">
-		<input type="text" name="DataField" id="DataField" value="<?php echo $Params['DataField']; ?>" size="30" />
-		<image name="imgName" src="../images/pull_down_inactive.gif" height="20" width="19"
+		<input style="float:left;" type="text" name="DataField" id="DataField" value="<?php echo $Params['DataField']; ?>" size="30" />
+		<img name="imgName" src="../images/pull_down_inactive.gif" height="18" width="18"
 		onMouseOver="handleOver(); return true;" onMouseOut="handleOut(); return true;"
-		onclick="JavaScript:menuActivate('DataField', 'combodiv', 'combosel')">
-		<div id="combodiv" style="position:absolute; display:none; top:0px; left:0px;z-index:10000" onmouseover="javascript:oOverMenu='combodiv';"
+		onclick="JavaScript:menuActivate('DataField', 'combodiv', 'combosel');" />
+		<div id="combodiv" style="position:absolute; display:none;z-index:10000" onmouseover="javascript:oOverMenu='combodiv';"
 		onmouseout="javascript:oOverMenu=false;">
-		<select size="10" id="combosel" style="width: 220; border-style: none" onclick="JavaScript:textSet('DataField',this.value);"
+		<select size="10" id="combosel" style="width:auto; border-style: none" onclick="JavaScript:textSet('DataField',this.value);"
 		onkeypress="JavaScript:comboKey('DataField', this);">
 		<?php echo CreateFieldList($ReportID, $FieldListings['defaults']['fieldname'],''); ?>
 		</select></div>
@@ -176,7 +176,7 @@ document.onmousedown = mouseSelect;
     </tr>
     <tr>
 		<?php if (!$Params['Color'] OR $Params['Color']=='1') $selected=' checked'; else $selected=''; ?>
-      <td><input name="Color" type="radio" value="1"<?php echo $selected; ?>><?php echo RPT_STDCOLOR; ? /><br />
+      <td><input name="Color" type="radio" value="1"<?php echo $selected; ?> /><?php echo RPT_STDCOLOR; ?><br />
 	  <div align="center"><select name="FontColor">
 		<?php foreach($FontColors as $key => $value) {
 			if ($Params['FontColor']==$key) $selected = ' selected'; else  $selected = '';
