--- a/reportwriter/admin/forms/TplFrmTBlk.html
+++ b/reportwriter/admin/forms/TplFrmTBlk.html
@@ -104,13 +104,13 @@ document.onmousedown = mouseSelect;
 		  <input name="TblSeqNum"  type="text" value="<?php echo $Params['TblSeqNum']; ?>" size="3" maxlength="2" />
 		  <?php } // end if ?></div></td>
       <td>
-		<input type="text" name="TblField" id="TblField" value="<?php echo $Params['TblField']; ?>" size="30" />
-		<image name="imgName" src="../images/pull_down_inactive.gif" height="20" width="19"
+		<input style="float:left;" type="text" name="TblField" id="TblField" value="<?php echo $Params['TblField']; ?>" size="30" />
+		<img name="imgName" src="../images/pull_down_inactive.gif" height="18" width="18"
 		onMouseOver="handleOver(); return true;" onMouseOut="handleOut(); return true;"
-		onclick="JavaScript:menuActivate('TblField', 'combodiv', 'combosel')">
-		<div id="combodiv" style="position:absolute; display:none; top:0px; left:0px;z-index:10000" onmouseover="javascript:oOverMenu='combodiv';"
+		onclick="JavaScript:menuActivate('TblField', 'combodiv', 'combosel');" />
+		<div id="combodiv" style="position:absolute; display:none;z-index:10000" onmouseover="javascript:oOverMenu='combodiv';"
 		onmouseout="javascript:oOverMenu=false;">
-		<select size="10" id="combosel" style="width: 220; border-style: none" onclick="JavaScript:textSet('TblField',this.value);"
+		<select size="10" id="combosel" style="width:auto; border-style: none" onclick="JavaScript:textSet('TblField',this.value);"
 		onkeypress="JavaScript:comboKey('TblField', this);">
 		<?php echo CreateFieldList($ReportID, $FieldListings['defaults']['fieldname'],''); ?>
 		</select></div>
@@ -129,10 +129,10 @@ document.onmousedown = mouseSelect;
 			echo'<tr><td align="center">'.$myrow['TblSeqNum'].'</td>';
 			echo'<td align="center">'.$myrow['TblField'].'</td>';
 			echo'<td align="center">'.$TextProcessing[$myrow['Processing']].'</td>';
-			echo'<td><input type="image" name="up'.$myrow['TblSeqNum'].'" value="up" src="../images/upicon.png" border="0" />
-			<input type="image" name="dn'.$myrow['TblSeqNum'].'" value="dn" src="../images/downicon.png" border="0" />
-			<input type="image" name="ed'.$myrow['TblSeqNum'].'" value="ed" src="../images/editicon.png" border="0" />
-			<input type="image" name="rm'.$myrow['TblSeqNum'].'" value="rm" src="../images/delicon.png" border="0" onClick="return confirm(\'Delete this field?\')" />
+			echo'<td><input type="image" name="up'.$myrow['TblSeqNum'].'" value="up" src="../images/upicon.png" />
+			<input type="image" name="dn'.$myrow['TblSeqNum'].'" value="dn" src="../images/downicon.png" />
+			<input type="image" name="ed'.$myrow['TblSeqNum'].'" value="ed" src="../images/editicon.png" />
+			<input type="image" name="rm'.$myrow['TblSeqNum'].'" value="rm" src="../images/delicon.png" onClick="return confirm(\'Delete this field?\')" />
 			</td></tr>';
 		}
 	} else {
