--- a/reportwriter/admin/forms/TplFrmTtl.html
+++ b/reportwriter/admin/forms/TplFrmTtl.html
@@ -7,7 +7,7 @@
 	<input name="SeqNum" type="hidden" value="<?php echo $SeqNum; ?>" />
 	<input name="ReportID" type="hidden" value="<?php echo $ReportID; ?>" />
 	<input name="ReportName" type="hidden" value="<?php echo $reportname; ?>" />
-  <table align="center" width="550"  border="0" cellspacing="0" cellpadding="0" />
+  <table align="center" width="550"  border="0" cellspacing="0" cellpadding="0">
     <tr>
       <td><input name="todo" type="submit" id="todo" value="<?php echo RPT_BTN_CANCEL; ?>" /></td>
       <td><div align="center"><input name="todo" type="submit" id="todo" value="<?php echo RPT_BTN_UPDATE; ?>" /></div></td>
